--- a/utils/package.json
+++ b/utils/package.json
@@ -4,8 +4,10 @@
   "description": "Scripts with functionality shared between SDKs. Should not be published.",
   "main": "networking.js",
   "scripts": {
-    "build": "esbuild formats.js --format=iife --global-name=zestyFormats --bundle --minify --outfile=dist/zesty-formats.js",
-    "build-networking": "esbuild networking.js --format=esm --global-name=zestyNetworking --bundle --minify --outfile=dist/zesty-networking.js",
+    "build": "tsc && esbuild dist/formats.js --format=iife --global-name=zestyFormats --bundle --minify --outfile=dist/zesty-formats.js",
+    "build-networking": "tsc && esbuild dist/networking.js --format=esm --global-name=zestyNetworking --bundle --minify --outfile=dist/zesty-networking.js",
+    "build-ts": "tsc",
+    "build-legacy": "esbuild formats.js --format=iife --global-name=zestyFormats --bundle --minify --outfile=dist/zesty-formats.js && esbuild networking.js --format=esm --global-name=zestyNetworking --bundle --minify --outfile=dist/zesty-networking.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,7 +24,10 @@
   ],
   "devDependencies": {
     "@babel/runtime": "^7.14.6",
-    "esbuild": "^0.11.14"
+    "esbuild": "^0.11.14",
+    "typescript": "^5.0.0",
+    "@types/uuid": "^8.3.0",
+    "@types/three": "^0.166.0"
   },
   "type": "module"
 }
