--- a/babylonjs/package.json
+++ b/babylonjs/package.json
@@ -1,23 +1,33 @@
 {
-    "name": "@zestymarket/babylonjs-sdk",
-    "version": "3.2.0",
-    "description": "This is the babylon.js SDK for Zesty Banner integration.",
-    "main": "dist/zesty-babylonjs-sdk.js",
-    "scripts": {
-        "test": "webpack --mode=development",
-        "build": "webpack --mode=production",
-        "serve": "webpack-dev-server --open",
-        "prettier": "prettier --write src/**.js gruntfile.js"
-    },
-    "author": "",
-    "license": "MIT",
-    "devDependencies": {
-        "prettier": "1.18.2",
-        "webpack": "^5.73.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.9.2"
-    },
-    "peerDependencies": {
-        "babylonjs": "^5.40.0"
-    }
+  "name": "@zestymarket/babylonjs-sdk",
+  "version": "3.2.0",
+  "description": "This is the babylon.js SDK for Zesty Banner integration.",
+  "main": "dist/zesty-babylonjs-sdk.js",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "test": "webpack --mode=development",
+    "build": "webpack --mode=production",
+    "serve": "webpack-dev-server --open",
+    "prettier": "prettier --write src/**.js gruntfile.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zestyxyz/zesty-ads-sdk-web.git",
+    "directory": "babylonjs"
+  },
+  "author": "Zesty",
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "prettier": "1.18.2",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
+  },
+  "peerDependencies": {
+    "babylonjs": "^5.40.0"
+  }
 }
