--- a/beacon/package.json
+++ b/beacon/package.json
@@ -3,13 +3,23 @@
   "version": "3.2.0",
   "description": "Enables a Zesty Beacon on a virtual space, allowing users to collect analytics on visitor numbers.",
   "main": "dist/zesty-beacon.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "webpack --mode=development",
     "build": "webpack --mode=production",
     "serve": "webpack-dev-server --open"
   },
-  "author": "",
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zestyxyz/zesty-ads-sdk-web.git",
+    "directory": "beacon"
+  },
+  "author": "Zesty",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
