--- a/beacon/package.json
+++ b/beacon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zestymarket/beacon",
+  "name": "@zestyxyz/beacon",
   "version": "3.2.0",
   "description": "Enables a Zesty Beacon on a virtual space, allowing users to collect analytics on visitor numbers.",
   "main": "dist/zesty-beacon.js",
