--- a/aframe/package.json
+++ b/aframe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zestymarket/aframe-sdk",
+  "name": "@zestyxyz/aframe-sdk",
   "version": "3.2.0",
   "description": "This is the A-Frame SDK for Zesty Banner integration.",
   "main": "dist/zesty-aframe-sdk.js",
