--- a/babylonjs/package.json
+++ b/babylonjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zestymarket/babylonjs-sdk",
+  "name": "@zestyxyz/babylonjs-sdk",
   "version": "3.2.0",
   "description": "This is the babylon.js SDK for Zesty Banner integration.",
   "main": "dist/zesty-babylonjs-sdk.js",
