--- a/playcanvas/package.json
+++ b/playcanvas/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zestymarket/playcanvas-sdk",
+  "name": "@zestyxyz/playcanvas-sdk",
   "version": "3.2.0",
   "description": "PlayCanvas SDK for Zesty Banner integration.",
   "main": "dist/zesty-playcanvas-sdk.js",
