--- a/r3f/package.json
+++ b/r3f/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zestymarket/r3f-sdk",
+  "name": "@zestyxyz/r3f-sdk",
   "version": "3.2.0",
   "description": "This is the react-three-fiber SDK for Zesty Banner integration.",
   "main": "dist/zesty-r3f-sdk.js",
