--- a/threejs/package.json
+++ b/threejs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zestymarket/threejs-sdk",
+  "name": "@zestyxyz/threejs-sdk",
   "version": "3.2.0",
   "description": "This is the three.js SDK for Zesty Banner integration.",
   "main": "dist/zesty-threejs-sdk.js",
